# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.7
#

2005-03-07 14:44:45 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-40

    Summary:
      xml, remove obsolete 'walk' method
    Revision:
      itools--main--0.7--patch-40


    modified files:
     Changelog xml/STL.py xml/XML.py


2005-03-07 10:24:52 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-39

    Summary:
      packaging, fix setup.py, use relative paths (by Herve)
    Revision:
      itools--main--0.7--patch-39

    Using relative paths solves the problem found by Herve when building
    Debian packages.
    
    Note that there is a much better solution for Python 2.4 that should
    be adopted once support for Python 2.3 is dropped, see:
    
      http://arch.oursours.net/zoom/herve@oursours.net--public/
        itools--herve--0.7--patch-6/setup.py
    
    This change integrates the patchs #6, half of #8, #11, #12 and #13.
    They have not been applied directly because the patch #8 was mixed
    with another non related change and produced conflicts.

    modified files:
     Changelog setup.py


2005-03-07 09:28:34 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-38

    Summary:
      catalog, optimize load, decode each slot in one step
    Revision:
      itools--main--0.7--patch-38

    Now each slot is loaded in one step, hence with only one access to the
    resource.
    
    The meseaured performance improvement when the resource layer is zope2
    is of 300%. With other resource layers the improvement is likely to be
    much lower.

    modified files:
     Changelog catalog/IIndex.py catalog/IO.py


2005-03-06 18:39:17 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-37

    Summary:
      catalog, use iterative algorithm to load the iindex
    Revision:
      itools--main--0.7--patch-37

    Instead of a recursive one. While this does not seem to change anything